@@ -19,7 +19,6 @@ package org.springframework.security.core;
 import java.math.BigInteger;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Deque;
 import java.util.Iterator;
 import java.util.List;
@@ -328,7 +327,7 @@ class ComparableVersion implements Comparable<ComparableVersion> {
 	 */
 	private static class StringItem implements Item {
 
-		private static final List<String> QUALIFIERS = Arrays.asList("alpha", "beta", "milestone", "rc", "snapshot", "",
+		private static final List<String> QUALIFIERS = List.of("alpha", "beta", "milestone", "rc", "snapshot", "",
 				"sp");
 
 		private static final Properties ALIASES = new Properties();
